--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "sepa",
   "description": "Create SEPA XML for business transactions",
   "license": "MPL-2.0",
-  "main":"lib/sepa.js",
+  "main": "lib/sepa.js",
   "version": "1.0.2",
   "repository": {
     "url": "https://github.com/kewisch/sepa.js"
@@ -11,9 +11,7 @@
   "directories": {
     "example": "examples"
   },
-  "pre-commit": [
-    "lint"
-  ],
+  "pre-commit": [],
   "scripts": {
     "lint": "eslint ."
   },
